fix: change w-container z-index not to overlay lotties

--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -130,15 +130,13 @@
 ul.list-2 > li{
   padding: 10px;
 }
-.background-animation.landing-animation {
+.landing-animation {
     left: auto;
     top: 10%;
     right: 0%;
     bottom: auto;
     width: 60%;
-		background-color: #1f1f1f !important;
-		z-index: -2;
-
+		background-color: #1f1f1f;
 }
 #landingbox.section {
     overflow: hidden;
@@ -146,7 +144,7 @@ ul.list-2 > li{
     padding-bottom: 80px;
     background-color: transparent;
     object-fit: fill;
-		background-color: #1f1f1f !important;
+		background-color: #1f1f1f;
 		position: relative;
 		height: 60vw;
 }
@@ -156,15 +154,14 @@ ul.list-2 > li{
     right: 0%;
     bottom: auto;
     width: 70%;
-		background-color: #1f1f1f !important;
-
+		background-color: #1f1f1f;
 }
 .background-animation.dark {
     left: 0%;
     top: auto;
     right: 0%;
     bottom: 0%;
-		background-color: #1f1f1f !important;
+		background-color: #1f1f1f;
 }
 .avatar-block{
   margin-bottom: 15px;
@@ -192,7 +189,7 @@ ul.list-2 > li{
 	border-bottom: 2px dotted #ff6d00;
 }
 .background-animation {
-	z-index: -99;
+	z-index: 0;
 }
 .w-container{
 	z-index: 50;
